# WorldNews

./: .gitignore  README.md  pyproject.toml  setup.cfg
backend/: package-lock.json  package.json  server.js
frontend/: app.js  index.html  styles.css
src/: __main__.py
src/my_package/: __init__.py
tests/: test_main.py
