[metadata]
name = my-python-project
version = 0.1.0
description = A sample Python project
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/my-python-project
license = MIT

[options]
packages = find:
install_requires =
    # List your project dependencies here
    # e.g. requests
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 88
extend-ignore = E203, W503